--- a/index.html
+++ b/index.html
@@ -1,9 +1,34 @@
 <html>
-
-
-
-
-
-
-
+ <head>
+  </head>
+  
+  <body>
+    <center>
+    <h1> Morghan's Website </h1>
+      <img
+           src="https://static.vecteezy.com/system/resources/thumbnails/023/251/759/small_2x/watercolour-piece-sliced-cut-orange-fruit-hand-painted-illustration-png.png">
+   
+  </body>
 </html>
+
+<style>  
+body {
+  background-color: orange;
+}
+h1 {
+  color: beige;
+  font-size: 275%;
+  text-decoration-color: beige;
+    letter-spacing: 5px;
+  word-spacing: 4px;
+  text-shadow: 1px 1px 2px yellow;
+  text-decoration-thickness: 3px;
+
+}
+img {
+  width: 15%;
+  border: dotted antiquewhite 3px;
+  border-radius: 100%;
+}
+} 
+</style>
