--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <html>
- <head>
+  <head>
   </head>
-  
   <body>
     <center>
     <h1> Morghan's Website </h1>
       <img
            src="https://static.vecteezy.com/system/resources/thumbnails/023/251/759/small_2x/watercolour-piece-sliced-cut-orange-fruit-hand-painted-illustration-png.png">
-   
+      
+      <ul>
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="projectsPage.html">Projects</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
+    
   </body>
+
+  
+  
 </html>
 
 <style>  
