--- a/index.html
+++ b/index.html
@@ -39,6 +39,26 @@ img {
   border: dotted antiquewhite 3px;
   border-radius: 100%;
 }
-} 
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #F3D34A;
+}
+li {
+  float: left;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+li a:hover {
+  background-color: #F3E37C;
+}
 </style>
 
