--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <ul>
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="projectsPage.html">Projects</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a href="conditionalPage.html">Conditional</a></li>
+  
 </ul>
     
   </body>
