--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       
       <ul>
   <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="projectsPage.html">Projects</a></li>
+  <li><a href="projectsPage.html">Digital Design</a></li>
   <li><a href="conditionalPage.html">Conditional</a></li>
   
 </ul>
