--- a/projectsPage.html
+++ b/projectsPage.html
@@ -9,6 +9,7 @@
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="projectsPage.html">Digital Design</a></li>
   <li><a href="conditionalPage.html">Conditional</a></li>
+  <li><a href="datasetPage.html">Dataset</a></li>
  
 </ul>
     
